syntax = "proto3";

package ibc.applications.fetchprice.genesis.v1;

import "gogoproto/gogo.proto";
import "ibc/applications/fetchprice/consumer/v1/genesis.proto";
import "ibc/applications/fetchprice/provider/v1/genesis.proto";

option go_package = "github.com/initia-labs/initia/x/ibc/fetchprice/genesis/types";

// GenesisState defines the ibc fetch-price genesis state
message GenesisState {
  ibc.applications.fetchprice.consumer.v1.GenesisState consumer_genesis_state = 1
      [(gogoproto.moretags) = "yaml:\"consumer_genesis_state\"", (gogoproto.nullable) = false];
  ibc.applications.fetchprice.provider.v1.GenesisState provider_genesis_state = 2
      [(gogoproto.moretags) = "yaml:\"provider_genesis_state\"", (gogoproto.nullable) = false];
}
